--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,9 +18,9 @@
 
 /* Colors */
 :root {
-  --color-default: #0a0d13;
-  --color-primary: #0d42ff;
-  --color-secondary: #0e1d34;
+  --color-default: #091660;
+  --color-primary: #242635;
+  --color-secondary: rgba(14, 29, 52, 0.8);
 }
 
 /* Smooth scroll behavior */
@@ -42,7 +42,7 @@ a {
 }
 
 a:hover {
-  color: #6f85d5;
+  color: #5e73c1;
   text-decoration: none;
 }
 
@@ -75,7 +75,7 @@ section {
   text-transform: uppercase;
   margin-bottom: 20px;
   padding-bottom: 0;
-  color: #001973;
+  color: rgba(14, 29, 52, 0.8);
   position: relative;
   z-index: 2;
   margin-bottom: 20px;
@@ -147,16 +147,16 @@ section {
 .breadcrumbs .page-header h2 {
   font-size: 56px;
   font-weight: 500;
-  color: #fff;
+  color: rgba(196, 199, 202, 0.8);
   font-family: var(--font-secondary);
 }
 
 .breadcrumbs .page-header p {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(14, 29, 52, 0.8);
 }
 
 .breadcrumbs nav {
-  background-color: #f3f6fc;
+  background-color: #f6f6f8;
   padding: 20px 0;
 }
 
@@ -308,7 +308,7 @@ section {
 }
 
 .header {
-  background: rgb(16 27 42 / 90%);
+  background: #f6f6fa;
   padding: 15px 0;
   box-shadow: 0px 2px 20px rgb(16 27 42 / 90%);
 }
@@ -323,7 +323,7 @@ section {
   font-size: 30px;
   margin: 0;
   font-weight: 700;
-  color: #fff;
+  color: rgba(14, 29, 52, 0.8);
   font-family: var(--font-primary);
 }
 
@@ -356,7 +356,7 @@ section {
     font-family: var(--font-primary);
     font-size: 16px;
     font-weight: 400;
-    color: rgba(255, 255, 255, 0.6);
+    color: rgba(14, 29, 52, 0.8);
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -375,7 +375,7 @@ section {
 
   .navbar .get-a-quote,
   .navbar .get-a-quote:focus {
-    background: var(--color-primary);
+    background: rgba(14, 29, 52, 0.8);
     padding: 8px 20px;
     margin-left: 30px;
     margin-right: 30px;
@@ -408,7 +408,7 @@ section {
     z-index: 99;
     opacity: 0;
     visibility: hidden;
-    background: #fff;
+    background: rgb(249, 248, 248);
     box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
     transition: 0.3s;
     border-radius: 4px;
@@ -494,7 +494,7 @@ section {
     inset: 0;
     padding: 50px 0 10px 0;
     margin: 0;
-    background: rgba(14, 29, 52, 0.9);
+    background: rgba(51, 56, 63, 0.9);
     overflow-y: auto;
     transition: 0.3s;
     z-index: 9998;
@@ -509,7 +509,7 @@ section {
     font-family: var(--font-primary);
     font-size: 16px;
     font-weight: 500;
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(2, 40, 65, 0.7);
     white-space: nowrap;
     transition: 0.3s;
   }
@@ -545,7 +545,7 @@ section {
   .navbar .get-a-quote:hover,
   .navbar .get-a-quote:focus:hover {
     color: #fff;
-    background: rgba(0, 170, 255, 0.785);
+    background: rgba(5, 18, 25, 0.785);
   }
 
   .navbar .dropdown ul,
@@ -609,7 +609,7 @@ section {
   font-weight: 700;
   font-size: 32px;
   font-family: var(--font-secondary);
-  color: #001f8d;
+  color: #030717;
 }
 
 .about .content ul {
@@ -1848,3 +1848,4 @@ section {
 .footer .credits a {
   color: #fff;
 }
+
