--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,13 +59,13 @@ h6 {
 # Sections & Section Header
 --------------------------------------------------------------*/
 section {
-  padding: 80px 0;
+  padding: 40px 0;
   overflow: hidden;
 }
 
 .section-header {
   text-align: center;
-  padding: 30px 0;
+  padding: 10px 0px;
   position: relative;
 }
 
@@ -73,7 +73,6 @@ section {
   font-size: 32px;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 20px;
   padding-bottom: 0;
   color: rgba(14, 29, 52, 0.8);
   position: relative;
@@ -130,7 +129,7 @@ section {
 # Breadcrumbs
 --------------------------------------------------------------*/
 .breadcrumbs .page-header {
-  padding: 140px 0 80px 0;
+  padding: 160px 0 50px 0;
   position: relative;
   background-size: cover;
   background-position: center;
@@ -147,7 +146,7 @@ section {
 .breadcrumbs .page-header h2 {
   font-size: 56px;
   font-weight: 500;
-  color: rgba(196, 199, 202, 0.8);
+  color: rgba(232, 237, 242, 0.8);
   font-family: var(--font-secondary);
 }
 
@@ -156,7 +155,7 @@ section {
 }
 
 .breadcrumbs nav {
-  background-color: #f6f6f8;
+  background-color: #e2e2e6;
   padding: 20px 0;
 }
 
@@ -308,7 +307,7 @@ section {
 }
 
 .header {
-  background: #f6f6fa;
+  background: #e2e2e6;
   padding: 15px 0;
   box-shadow: 0px 2px 20px rgb(16 27 42 / 90%);
 }
@@ -355,10 +354,10 @@ section {
     padding: 10px 0 10px 30px;
     font-family: var(--font-primary);
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 700;
     color: rgba(14, 29, 52, 0.8);
     white-space: nowrap;
-    transition: 0.3s;
+    transition: 0.1s;
   }
 
   .navbar a i,
@@ -368,8 +367,7 @@ section {
     margin-left: 5px;
   }
 
-  .navbar a:hover
-{
+  .navbar a:hover{
     color:rgba(0, 170, 255, 0.785);
   }
 
@@ -377,9 +375,9 @@ section {
   .navbar .get-a-quote:focus {
     background: rgba(14, 29, 52, 0.8);
     padding: 8px 20px;
-    margin-left: 30px;
+    margin-left: 50px;
     margin-right: 30px;
-    border-radius: 4px;
+    border-radius: 10px;
     color: #fff;
   }
   .navbar .form-select,
@@ -620,7 +618,7 @@ section {
 .about .content ul li {
   display: flex;
   align-items: flex-start;
-  margin-top: 40px;
+  margin-top: 25px;
 }
 
 .about .content ul i {
@@ -643,6 +641,15 @@ section {
 
 .about .content p:last-child {
   margin-bottom: 0;
+}
+
+.aboutImg {
+  margin-top: 80px;
+  margin-left: 100px;
+  opacity: 0.65;
+  max-width: 350px;
+  width: auto;
+  height: auto;
 }
 
 .about .play-btn {
@@ -797,7 +804,7 @@ section {
 .call-to-action {
   background: linear-gradient(rgba(14, 29, 52, 0.6), rgba(14, 29, 52, 0.8)), url("../img/cta-bg.jpg") center center;
   background-size: cover;
-  padding: 100px 0;
+  padding: 80px 0;
 }
 
 @media (min-width: 1365px) {
@@ -953,64 +960,6 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Frequently Asked Questions Section
---------------------------------------------------------------*/
-.faq {
-  padding-top: 80px;
-}
-
-.faq .accordion-item {
-  border: 0;
-  margin-bottom: 10px;
-}
-
-.faq .accordion-collapse {
-  border: 0;
-}
-
-.faq .accordion-button {
-  padding: 15px 30px 20px 60px;
-  font-weight: 600;
-  border: 0;
-  font-size: 18px;
-  color: var(--color-default);
-  text-align: left;
-  background: rgba(14, 29, 52, 0.03);
-  border-radius: 5px;
-}
-
-.faq .accordion-button:focus {
-  box-shadow: none;
-}
-
-.faq .accordion-button:not(.collapsed) {
-  color: var(--color-primary);
-  border-bottom: 0;
-  box-shadow: none;
-}
-
-.faq .question-icon {
-  position: absolute;
-  top: 14px;
-  left: 25px;
-  font-size: 20px;
-  color: var(--color-primary);
-}
-
-.faq .accordion-button:after {
-  position: absolute;
-  right: 15px;
-  top: 15px;
-}
-
-.faq .accordion-body {
-  padding: 0 30px 25px 60px;
-  border: 0;
-  background: rgba(14, 29, 52, 0.03);
-  border-radius: 5px;
-}
-
-/*--------------------------------------------------------------
 # Testimonials Section
 --------------------------------------------------------------*/
 .testimonials {
@@ -1029,7 +978,7 @@ section {
 }
 
 .testimonials .section-header {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .testimonials .testimonials-carousel,
@@ -1057,7 +1006,7 @@ section {
  
 }
 .testimonials .testimonial-item h3 {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #fff;
@@ -1127,101 +1076,6 @@ section {
   }
 }
 
-/*--------------------------------------------------------------
-# Stats Counter Section
---------------------------------------------------------------*/
-.stats-counter .stats-item {
-  padding: 30px;
-  width: 100%;
-}
-
-.stats-counter .stats-item span {
-  font-size: 48px;
-  display: block;
-  color: var(--color-secondary);
-  font-weight: 700;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-  position: relative;
-}
-
-.stats-counter .stats-item span:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 25px;
-  height: 3px;
-  background: var(--color-primary);
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-}
-
-.stats-counter .stats-item p {
-  padding: 0;
-  margin: 0;
-  font-family: var(--font-primary);
-  font-size: 15px;
-  font-weight: 500;
-  color: var(--color-secondary);
-}
-
-/*--------------------------------------------------------------
-# Our Team Section
---------------------------------------------------------------*/
-.team .member {
-  text-align: center;
-  margin-bottom: 20px;
-  background: #fff;
-  border: 1px solid rgba(14, 29, 52, 0.15);
-}
-
-.team .member img {
-  margin: -1px -1px 30px -1px;
-}
-
-.team .member .member-content {
-  padding: 0 20px 30px 20px;
-}
-
-.team .member h4 {
-  font-weight: 700;
-  margin-bottom: 2px;
-  font-size: 18px;
-}
-
-.team .member span {
-  font-style: italic;
-  display: block;
-  font-size: 13px;
-  color: #6c757d;
-}
-
-.team .member p {
-  padding-top: 10px;
-  font-size: 14px;
-  font-style: italic;
-  color: #6c757d;
-}
-
-.team .member .social {
-  margin-top: 15px;
-}
-
-.team .member .social a {
-  color: rgba(14, 29, 52, 0.5);
-  transition: 0.3s;
-}
-
-.team .member .social a:hover {
-  color: var(--color-primary);
-}
-
-.team .member .social i {
-  font-size: 18px;
-  margin: 0 2px;
-}
 
 /*--------------------------------------------------------------
 # Horizontal Pricing Section
@@ -1339,14 +1193,14 @@ section {
 # Get a Quote Section
 --------------------------------------------------------------*/
 .get-a-quote .quote-bg {
-  min-height: 500px;
+  min-height: 300px;
   background-size: cover;
   background-position: center;
 }
 
 .get-a-quote .php-email-form {
   background: #f3f6fc;
-  padding: 40px;
+  padding: 20px;
   height: 100%;
 }
 
@@ -1475,7 +1329,7 @@ section {
 # Contact Section
 --------------------------------------------------------------*/
 .contact .info-item+.info-item {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .contact .info-item i {
@@ -1601,18 +1455,18 @@ section {
 --------------------------------------------------------------*/
 .service-details .services-list {
   padding: 10px 30px;
-  border: 1px solid #d3dff3;
   margin-bottom: 20px;
 }
 
 .service-details .services-list a {
   display: block;
   line-height: 1;
-  padding: 8px 0 8px 15px;
+  padding: 8px 12px 8px 15px;
   border-left: 3px solid #c2cbdf;
-  margin: 20px 0;
+  margin-left: 20px 0;
   color: var(--color-secondary);
   transition: 0.3s;
+  display: inline-block;
 }
 
 .service-details .services-list a.active {
@@ -1620,22 +1474,30 @@ section {
   border-color: var(--color-primary);
 }
 
+/*
 .service-details .services-list a:hover {
   border-color: var(--color-primary);
-}
+}*/
 
 .service-details .services-img {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  padding-left: 10px;
+  max-width: 700px;
+  max-height: 400px;
+  width: auto;
+  height: auto;
+  float: right;
+  position: relative;;
 }
 
 .service-details h3 {
-  font-size: 28px;
+  font-size: 30px;
   font-weight: 700;
   color: var(--color-secondary);
 }
 
 .service-details h4 {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
   color: var(--color-secondary);
 }
@@ -1667,23 +1529,26 @@ section {
 --------------------------------------------------------------*/
 .hero {
   width: 100%;
-  min-height: 100vh;
-  background-color: var(--color-secondary);
-  background-image: url("../img/logistic-supply-Management.png");
+  min-height: 50vh;
+  background-color: rgb(32, 58, 83);
+  background-image: url("../img/hero.png");
+  opacity: 0.9;
   background-size: cover;
   background-position: center;
   position: relative;
-  padding: 120px 0 60px 0;
-  color: rgb(2, 18, 37);
-  margin-bottom: 120px;
+  padding: 100px 0 50px 0;
+  color: rgb(200, 204, 208);
+  margin-bottom: 40px;
 }
 
+
 .hero h2 {
-  margin-bottom: 200px;
+  margin-bottom: 140px;
+  position: relative;
   padding: 0;
   font-size: 48px;
   font-weight: 700;
-  color: var(--color-secondary);
+  color: rgb(211, 217, 220);
 }
 
 @media (max-width: 575px) {
@@ -1698,41 +1563,6 @@ section {
   margin-bottom: 40px;
 }
 
-
-.hero .stats-item {
-  padding: 30px;
-  width: 100%;
-}
-
-.hero .stats-item span {
-  font-size: 32px;
-  display: block;
-  font-weight: 700;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
-  position: relative;
-}
-
-.hero .stats-item span:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 20px;
-  height: 3px;
-  background: var(--color-primary);
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-}
-
-.hero .stats-item p {
-  padding: 0;
-  margin: 0;
-  font-family: var(--font-primary);
-  font-size: 15px;
-  font-weight: 600;
-}
 
 /*--------------------------------------------------------------
 # Footer
@@ -1765,25 +1595,6 @@ section {
 .footer .footer-info p {
   font-size: 14px;
   font-family: var(--font-primary);
-}
-
-.footer .social-links a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  font-size: 16px;
-  color: rgba(255, 255, 255, 0.7);
-  margin-right: 10px;
-  transition: 0.3s;
-}
-
-.footer .social-links a:hover {
-  color: #fff;
-  border-color: #fff;
 }
 
 .footer h4 {
@@ -1849,3 +1660,8 @@ section {
   color: #fff;
 }
 
+
+#language-select a{
+  display: inline-block;
+  padding: 0;
+}
